etc/css/style.css
/* ... */
div.inspector-category {
  margin-top: 5px;
}

div.inspector-category > div.detail-toggle > div.detail-toggle-summary {
  background-color: var(--panel-bg);
  border-radius: 3px;
  padding-top: 5px;
  padding-bottom: 5px;
}

span.inspector-value-bool {
  color: #4981B5;
}

span.inspector-value-int {
  color: var(--light-green);
}

span.inspector-value-float {
  color: var(--light-green);
}

span.inspector-value-text {
  color: #B5894B;
}

span.inspector-value-enum, span.inspector-value-bitmask {
  color: #7D67B5;
}

div.inspector-component-expand-nodata {
  width: 10px;
  text-align: center;
  color: #b4b4b4;
}

div.inspector-component-expand-nodata span {
  text-align: center;
}

a.inspector-link {
  color: var(--green);
  cursor: pointer;
}

a.inspector-link:hover {
  color: white;
}

img.inspector-image {
  display: block;
  object-fit: scale-down;
  max-width: 200px;
  max-height: 100px;
  margin-top: 10px;
  margin-bottom: 20px;
  border-radius: 5px;
}

span.inspector-parent {
  margin-left: 5px;
}

div.inspector-doc {
  display: flex;
  margin-left: 15px;
  margin-bottom: 15px;
}

span.inspector-brief {
  display: flex;
  color: var(--secondary-text);
  margin-right: 5px;
}

span.inspector-link a { 
  color: var(--green);
  text-decoration: none;
  cursor: pointer;
}

div.inspector-entity-name {
  margin-left: 15px;
  margin-bottom: 15px;
  max-width: 380px;
  overflow: hidden;
  /* text-overflow: ellipsis; */
  white-space: nowrap;
}

span.inspector-entity-name {
  color: var(--primary-text);
  margin-right: 5px;
  overflow-x: hidden;
}

span.inspector-entity-name-label {
  font-weight: 500;
}

div.inspector-buttons  {
  border-style: solid;
  border-width: 1px;
  border-left-width: 0px;
  border-right-width: 0px;
  border-top-width: 0px;
  border-color: var(--steel-700);
  padding-top: 0px;
  padding-bottom: 10px;
  margin-left: 15px;
  margin-right: 15px;
}

span.inspector-button  {
  color: var(--primary-text);
  background-color: var(--prop-bg);
  border-radius: 3px;
  padding: 7px;
  padding-left: 10px;
  padding-right: 10px;
  cursor: pointer;
  height: 18px;
}

span.inspector-button:hover  {
  background-color: var(--steel-650);
}

span.inspector-button-disabled {
  opacity: 0.5;
  cursor: default;
}

span.inspector-button-disabled:hover {
  background-color: var(--prop-bg);
}


span.inspector-button:active  {
  background-color: var(--steel-600);
}

span.entity-reference span {
  white-space: nowrap;
  display: flex;
  flex-direction: row;
  align-items: center;
}

span.entity-reference-clickable-name {
  transition: 0.3s color;
  cursor: pointer;
}

span.entity-reference-clickable-name:hover {
  color: var(--primary-text);
}

span.entity-parent {
  font-size: var(--text-fs);
  color: var(--green);
}

/* -- end of inspector -- */

div.url-modal {
  position: absolute;
  top: 0px;
  z-index: 99;
  background-color: rgb(0, 0, 0, 0.6);
  width: 100%;
  height: 100%;
}

div.url-modal-hidden {
  display: none;
}

div.url-modal-content {
  position: relative;
  top: calc(20% - 64px);
  margin: 0 auto;
  width: 700px;
  overflow: auto;
  overflow-wrap: anywhere;
  background-color: var(--panel-header-bg);
  padding: 20px;
}

div.url-modal-url-container {
  background-color: var(--panel-bg);
  border-color: #000;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  padding: 20px;
  height: 200px;
}

div.url-modal-url {
  overflow-y: auto;
  height: 100%;
}

div.url-modal-content a {
  color: var(--primary-text);
}

div.url-modal h1 {
  font-size: var(--text-fs-lg);
  line-height: var(--text-lh-lg);
  margin: 0px;
  margin-bottom: 15px;
}

div.editor {
  padding-left: 10px;
  padding-bottom: 3px;
}

div.editor-detail {
  height: 200px;
}

div.editor-textarea {
  position: relative;
  height: 100%;
  border: none;
  resize: none;
  color: var(--primary-text);
  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  font-size: var(--text-fs-md);
  letter-spacing: 0.0px;
}

button.editor-button-run {
  position: absolute;
  top: 7px;
  right: 7px;
  height: 35px;
  padding-left: 30px;
  padding-right: 30px;
  background-color: var(--green);
  color: #000;
  border: none;
  cursor: pointer;
}

div.ecs-query {
  display: flex;
  align-items: center;
  
  padding-top: 2px;
  padding-left: 8px;
  margin-left: -5px; /* offset padding */

  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  letter-spacing: 0.0px;
  font-size: 14;

  transition: background-color 0.2s;
  border-radius: 6px;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(0, 0, 0, 0);

  color: var(--primary-text);
  max-width: calc(100% - 40px);
}

div.ecs-query div.ldt {
  min-width: 36px;
  max-width: 100%;
  min-height: 19px;
  overflow-x: hidden;
}

div.ecs-query-empty div.ldt {
  min-width: 1px;
}

div.query-default-text {
  font-family: Inter, Helvetica, sans-serif;
  font-weight: 400;
  color: var(--primary-text);
  opacity: 0.5;
  cursor: pointer;
}

div.ecs-query:hover {
  background-color: var(--light-hover-bg);
}

div.ecs-query pre, div.editor pre {
  min-height: 16px;
}

div.ecs-query-ok {
  transition: background-color 0s;
}

div.ecs-query-error span {
  color: var(--error) !important;
}

div.ecs-query-error div.ecs-query-focus {
  border-color: var(--red) !important;
}

div.ecs-query-focus {
  padding-top: 2px;
  transition: padding-top 0.2s;
  padding-right: 25px;
  background-color: #13151A !important;
}

div.ecs-query-multiline {
  border-color: #b4b4b4;
  border-style: solid;
  border-width: 2px;
  border-radius: 6px;
  padding-top: 5px;
  padding-left: 7px;
  padding-right: 40px;
  padding-bottom: 10px;
  box-shadow: 0px 0px 20px black;
  position: absolute;
  top: 3px;
}

div.error {
  position: relative;
  text-align: center;
  width: 100%;
}

div.error span {
  color: var(--red);
}
/* ... */

